# AcademyScopeYKSTercihRobotu

./: .gitignore  .gitmodules  AboutDialog.cpp  AboutDialog.hpp  AboutDialog.ui  AcademyScope.rc  BackEnd.cpp  BackEnd.hpp  CMakeLists.txt  CreateAssets.car.sh  EnumDefinitions.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  README.md  Resources.qrc  SQLiteUtil.cpp  SQLiteUtil.hpp  TurkishFilterProxy.cpp  TurkishFilterProxy.hpp
EkYerlestirme/: Tablo3.csv  Tablo3.ods  Tablo3.xls  Tablo3.xlsx  Tablo3P1.csv  Tablo3P1.ods  Tablo3P2.ods  Tablo3P2.xlsx  Tablo3P3.xlsx  Tablo3Processed.ods  Tablo3Processed.xlsx  Tablo4.csv  Tablo4.ods  Tablo4.xls  Tablo4.xlsx  Tablo4P1.csv  Tablo4P1.ods  Tablo4P2.ods  Tablo4P2.xlsx  Tablo4P3.xlsx  Tablo4Processed.ods  Tablo4Processed.xlsx  tablo3_25092025.csv  tablo3_25092025.xls  tablo3_25092025_P1.xlsx  tablo4_25092025.csv  tablo4_25092025.xls  tablo4_25092025_P1.xlsx
Installer/DMG/: CreateDMG.txt  InstallerBackground.xcf  InstallerDiskIcon.icns  InstallerDiskIcon.xcf
Installer/InnoSetup/: AcademyScopeInstaller.iss
Resources/: AcademyScope.rc  Resources.qrc
Resources/Icons/: AcademyScope.icns  AcademyScopeWindowsIcon.xcf  Assets.car  IconGeneration.txt
Resources/Icons/AcademyScope.icon/: icon.json
Resources/Images/: AcademyScope.xcf
Src/: AboutDialog.cpp  AboutDialog.hpp  MainWindow.cpp  MainWindow.hpp  TurkishFilterProxy.cpp  TurkishFilterProxy.hpp  main.cpp
Src/Utils/: DarkModeUtil.cpp
UI/: AboutDialog.ui  MainWindow.ui
Utils/: DarkModeUtil.hpp  SQLiteUtil.hpp  StringUtil.cpp  StringUtil.hpp
macOS/: Info.plist
